--- a/topic_modeling/requirements.txt
+++ b/topic_modeling/requirements.txt
@@ -12,6 +12,8 @@ matplotlib>=3.5.0
 seaborn>=0.11.0
 wordcloud>=1.8.0
 plotly>=5.0.0
+openpyxl>=3.1.0
+openai>=1.44.0
 
 # Przetwarzanie tekstu
 gensim>=4.0.0
